--- a/sites/btc/style.css
+++ b/sites/btc/style.css
@@ -1,9 +1,10 @@
 div {
+	float: left;
 	border: 3px solid black;
-	border-radius: 10px;
-	width: 60px;
-	height: 57px;
+	border-radius: 7px;
+	width: 40px;
+	height: 45px;
 }
 img {
-	transform: translate(13px, 5px);
+	transform: translate(4px, 7.5px);
 }
